tests/suite/snapshots/suite__check__tests__check__bad_pa3_6.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_pa3_6.xi:1:22]
   │
 1 │ foo(): bool { return baz() }
   ·                      ─┬─  
   ·                       ╰─── Unbound function baz
───╯

